--- a/public/assets/css/open-iconic-bootstrap.css
+++ b/public/assets/css/open-iconic-bootstrap.css
@@ -13,7 +13,7 @@
   position: relative;
   top: 1px;
   display: inline-block;
-  speak: none;
+  /* speak: none; */
   font-family: Icons;
   font-style: normal;
   font-weight: 400;
